# scrippiscrappa

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: build.yml
coobyk.pp.ua/coobyk.pp.ua/: blog.html  index.html
coobyk.pp.ua/coobyk.pp.ua/_next/static/B2Aa0mYZcDozw70Qbisev/: _buildManifest.js
coobyk.pp.ua/coobyk.pp.ua/_next/static/chunks/pages/: 404-23e03c4b055c68b8.js  blog-add2756088b9ad5f.js  index-122b489fa44930b0.js
coobyk.pp.ua/coobyk.pp.ua/_next/static/css/: 59fdb4397a98d780.css
dj-ponchic.narod.ru/dj-ponchic.narod.ru/: index.html
src/: main.rs
