[package]
name = "scrippiscrappa"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1.28", features = ["full"] }
scraper = "0.13"
url = "2.2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
sanitize-filename = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
