[package]
name = "scrippiscrappa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "rustls-tls-native-roots"], default-features = false }
tokio = { version = "1", features = ["full"] }
scraper = "0.21"
url = "2"
anyhow = "1"
mime = "0.3"
futures = "0.3"
zip = "2"
